# gpu-io-libs

./: .gitignore  CMakeLists.txt  DOCKER.md  LICENSE  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
benches/: .gitignore  CMakeLists.txt  read_benchmarks.cu
benches/common/: benchmark_utils.h  hdf5_reference.h
data/: gpu_test2.h5  system_info.h5  test_basic.h5  test_chunked.h5  test_datatypes.h5  test_groups.h5  test_write_target.h5
example/basic_hdf5/: CMakeLists.txt
example/basic_hdf5/src/: main.cpp  sample.h
example/hdf5_cpp/: CMakeLists.txt  Dockerfile.dev  docker-compose.yml
example/hdf5_cpp/src/: hwinfo.h  main.cpp
example/parallel_hdf5/: CMakeLists.txt  Dockerfile.dev
example/structure/: CMakeLists.txt
example/structure/src/: main.cpp
implementation/: CMakeLists.txt
implementation/include/jenkins/: lookup3.cpp
implementation/src/hdf5/: cstd.h  dataset.cpp  dataset.h  datatype.cpp  datatype.h  error.h  file.cpp  file.h  file_link.cpp  file_link.h  gpu_string.h  group.cpp  group.h  hyperslab.cpp  hyperslab.h  local_heap.cpp  local_heap.h  object.cpp  object.h  object_header.cpp  object_header.h  superblock.cpp  superblock.h  symbol_table.cpp  symbol_table.h  tree.cpp  tree.h  types.h
implementation/src/serialization/: buffer.h  filestream.h  serialization.h  stdio.h
implementation/src/util/: align.h  gpu_vector.h  lookup3.h  string.h
implementation/test/unit/basic_hdf5/: docker-compose.yml
libs/hdf5-gpu/: CMakeLists.txt
libs/hdf5-gpu/benches/: CMakeLists.txt  pyproject.toml  read_benchmarks.cu
libs/hdf5-gpu/benches/common/: benchmark_utils.h
libs/hdf5-gpu/benchmarks/: README.md  generate_data.py
libs/hdf5-gpu/benchmarks/common/: benchmark_utils.h
libs/hdf5-gpu/src/hdf5/: cstd.h  datatype.h  file.h  file_link.cpp  gpu_string.h  hyperslab.cpp  local_heap.cpp  local_heap.h  object.cpp  superblock.cpp  tree.cpp  tree.h
libs/hdf5-gpu/src/iowarp/: cpu_polling.cpp  cpu_polling.h  gpu_posix.cu  io_message.h
libs/hdf5-gpu/src/serialization/: gpu_posix.h
libs/hdf5-gpu/test/: CMakeLists.txt  hdf5_comprehensive_test.cu
libs/hdf5-gpu/test/generate/: README.md  generate_test_files.py  verify_test_files.py
libs/hdf5-gpu/test/parallel_hdf5/data/: starcluster_data.hdf5
libs/hdf5-gpu/test/parallel_hdf5/src/: main.cpp
libs/hdf5-gpu/test/unit/: CMakeLists.txt
libs/kvhdf5/: CMakeLists.txt  CMakePresets.json  README.md
libs/kvhdf5/bench/: CMakeLists.txt  attribute_bench.cpp  container_bench.cpp  cte_raw_bench.cpp  dataset_bench.cpp  gray_scott_bench.cpp  group_bench.cpp  iowarp_full_bench.cu  lifecycle_bench.cpp  vector_bench.cpp
libs/kvhdf5/bench/common/: bench_fixture.h
libs/kvhdf5/config/: chimaera_ram.yaml
libs/kvhdf5/examples/: CMakeLists.txt  README.md  test_init.cc
libs/kvhdf5/examples/common/: heatmap.h
libs/kvhdf5/examples/gray_scott_iowarp/: CMakeLists.txt  cleanup.sh  gray_scott_gpu.cu  gray_scott_host.cc  gray_scott_host.h  gray_scott_init.cc  iowarp_step.cu  iowarp_step.h
libs/kvhdf5/examples/gray_scott_traditional/: CMakeLists.txt  backend.h  blob_key.h  disk_backend.cc  disk_backend.h  gs_kernel.cu  gs_kernel.h  gs_params.h  main.cc  ram_backend.cc  ram_backend.h
libs/kvhdf5/src/: defines.h  serde.h
libs/kvhdf5/src/kvhdf5/: allocator.h  blob_backend.h  blob_store.h  chunking.h  container.h  context.h  cpu_cte_blob_store.cpp  cpu_cte_blob_store.h  cpu_dataset.h  cpu_file.h  cte_blob_store.cpp  cte_blob_store.h  dataset.h  dataspace.h  datatype.h  defines.h  error.h  file.h  gpu_cte_blob_store.h  gpu_cte_dataset.h  gpu_dataset_handle.h  group.h  hdf5.h  hdf5_attribute.h  hdf5_dataset.h  hdf5_datatype.h  hdf5_group.h  inmem_blob_backend.h  memory_blob_store.h  ref.h  types.h
libs/kvhdf5/src/kvhdf5/types/: chunk_key.h  dataset_id.h  datatype_id.h  group_id.h  object_id.h
libs/kvhdf5/src/utils/: algorithms.h  buffer.h  gpu_string.h
libs/kvhdf5/test/: CMakeLists.txt  gpu_string_test.cpp  serde_test.cpp  types_test.cpp
libs/kvhdf5/test/clio/: CMakeLists.txt  cte_putget_test.cu
libs/kvhdf5/test/common/: allocator_fixture.h  cte_runtime.h  cuda_compat.h
libs/kvhdf5/test/e2e/: CMakeLists.txt  async_overlap_test.cu  dataset_gpu_putget_test.cu  dataset_lifecycle_test.cu  dataset_refire_probe_test.cu  gray_scott_async_e2e_test.cu  gray_scott_gpu_test.cu  gray_scott_threeway_bench.cu  multichunk_gpu_putget_test.cu  run_threeway_bench.sh
libs/kvhdf5/test/integration/iowarp/: buddy_allocator_test.cpp  cte_test.cpp  vector_test.cpp
libs/kvhdf5/test/integration/iowarp/gpu/: CMakeLists.txt  async_overlap_test.cu  cte_putget_test.cu  dataset_gpu_putget_test.cu  dataset_lifecycle_test.cu  dataset_refire_probe_test.cu  gpu_cte_fixture.h  gray_scott_async_e2e_test.cu  gray_scott_gpu_test.cu  gray_scott_threeway_bench.cu  multichunk_gpu_putget_test.cu  run_threeway_bench.sh  shared_cte_env.h  test_cpu_client.cc  test_gpu_kernel.cu
libs/kvhdf5/test/support/: cte_env.h
libs/kvhdf5/test/unit/: CMakeLists.txt  blob_store_test.cpp  chunking_test.cpp  clang18_repro_test.cu  container_complex_test.cpp  container_test.cpp  context_test.cpp  cte_blob_store_test.cpp  dataset_chunk_iter_test.cpp  dataset_edge_test.cpp  dataset_extent_test.cpp  dataset_hyperslab_test.cpp  dataset_io_test.cpp  dataset_multi_chunk_test.cpp  dataset_single_chunk_test.cpp  dataset_stress_test.cpp  dataset_types_test.cpp  dataspace_test.cpp  datatype_test.cpp  file_test.cpp  gpu_blob_store_typed_test.cu  gpu_container_helpers.cc  gpu_container_helpers.h  gpu_container_test.cu  gpu_cte_blob_store_test.cu  gpu_dataset_test.cu  gpu_file_test.cu  gpu_group_test.cu  gpu_integration_test.cu  hdf5_attribute_test.cpp  hdf5_dataset_test.cpp  hdf5_datatype_test.cpp  hdf5_group_test.cpp  metadata_test.cpp  ref_test.cpp  serde_test.cpp  tag_path_test.cpp
src/: main.cpp
test/libhdf5/parallel_hdf5/: CMakeLists.txt
test/unit/: CMakeLists.txt  gpu_file_read_test.cu  hdf5_comprehensive_test.cu  iowarp_gpu_emu_test.cu  minimal_gpu_test.cu  minimal_io_test.cu  simple_file_test.cu
test/unit/parallel_hdf5/: docker-compose.yml
(+46 files in other folders)
